1.19-6.2.1:
- Better api to get multibuilding information

1.19-6.2.0:
- Better error reporting in some situations
- Highway parts can now be randomized
- Railway parts can now be randomized
- Streets are now parts ('street_*.json') and can be customized. Part of the city style. This means that the old settings like streetWidth and the street palette entries are no longer used!
- Added new 'cityMinHeight' and 'cityMaxHeight' profile options to better control where cities can spawn based on the height of the terrain
- New command 'resumeedit' to resume editing a part after reloading the world
- Major refactor of the multi building system:
    - This system should be much faster
    - Very large multibuildings have better chances to actually spawn
    - New 'multisettings' block in the world style. This allows control over how the multibuildings spawn
- 'multi_max_x' and 'multi_max_z' have now been removed from the profile. They are no longer used
- 'building2x2Chance' has now been removed from the profile. It is no longer used

1.19-6.1.1:
- Fixed a problem with the exportpart command
- Fixed a problem with editmode. It didn't properly remember the editing data when reloading a world

1.19-6.1.0:
- Big optimization during worldgen. Most of the todo queues are now avoided
- Flattening/interpolation of the heightmap now goes to build limit
- New forceSaplingGrowth server config option to disable the expensive auto sapling grow
- New avoidStructures server config option to avoid generating Lost Cities in chunks that have structures. By default the following structures are avoided (besides villages): mansions, igloos, swamp huts, and temples
- Fixed a problem where sometimes you could have floating trees
- Greatly extended the palette that can be exported by the exportpart command. It now includes a lot of unicode characters as well

1.19-6.0.29:
- Fixed a crash with the new 'stuff' feature

1.19-6.0.28: